Ensure text remains visible during webfont load

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @font-face {
   font-family: Amsterdam Four;
+  font-display: swap;
   src: url("/fonts/Amsterdam\ Four_ttf\ 400.ttf");
 }
